--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -18,7 +18,7 @@ body {
   backdrop-filter: blur(20px);
   margin: auto;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
   width: 100%;
   border-radius: 14px;
   padding: 3rem;
