--- a/src/Styles/ExpenseForm.scss
+++ b/src/Styles/ExpenseForm.scss
@@ -14,6 +14,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1rem;
+      width: 100%;
     }
     .amount {
       display: flex;
@@ -31,7 +32,7 @@
       border: 1px solid #ddd;
       border-radius: 4px;
       outline: none;
-      width: 100%;
+      width: 95%;
       font-size: 1rem;
 
       &:focus {
@@ -45,6 +46,22 @@
       align-items: center;
       justify-content: center;
       gap: 3rem;
+    }
+    @media (max-width: 600px) {
+      .button-row {
+        flex-direction: column;
+        text-align: center;
+        gap: 1rem;
+      }
+
+      input {
+        width: 90%;
+        padding: 0.7rem;
+      }
+
+      button {
+        width: 90%;
+      }
     }
 
     button {
@@ -95,5 +112,12 @@
         width: 100%;
       }
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .containerForm {
+    margin: 1rem auto;
+    padding: 1rem 0;
   }
 }
