--- a/src/Styles/List.scss
+++ b/src/Styles/List.scss
@@ -6,25 +6,27 @@
     border: 1px solid rgba(249, 250, 251, 0.55);
     margin-top: 1rem;
     border-radius: 8px;
-    th,
-    td {
-      padding: 1rem;
-      border-bottom: 1px solid rgba(249, 250, 251, 0.55);
-    }
+    overflow-x: auto; /* Enable horizontal scroll on small screens */
+  }
 
-    th {
-      background-color: rgba(16 18 27 / 40%);
-      font-size: medium;
-      font-weight: bold;
-      cursor: pointer;
-      &:hover {
-        background-color: rgba(16 18 27 / 60%);
-        // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1), 0 2px 20px rgba(0, 0, 0, 0.2);
-      }
+  th,
+  td {
+    padding: 1rem;
+    border-bottom: 1px solid rgba(249, 250, 251, 0.55);
+  }
+
+  th {
+    background-color: rgba(16 18 27 / 40%);
+    font-size: medium;
+    font-weight: bold;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(16 18 27 / 60%);
     }
-    tr:last-child td {
-      border-bottom: none;
-    }
+  }
+
+  tr:last-child td {
+    border-bottom: none;
   }
 
   button {
@@ -49,6 +51,26 @@
     background-color: #4caf50;
     &:hover {
       background-color: transparent;
+    }
+  }
+
+  /* Media Query for small screens */
+  @media screen and (max-width: 660px) {
+    th,
+    td {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    th {
+      display: none; /* Hide table headers on small screens */
+    }
+    tr {
+      margin-bottom: 1rem;
+    }
+    tr:last-child td {
+      border-bottom: 1px solid rgba(249, 250, 251, 0.55);
     }
   }
 }
